[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ensp-mcp"
version = "0.1.1"
description = "MCP server for Huawei eNSP network simulation platform"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "telnetlib3>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
